--- a/GIS/21611091GIS.md
+++ b/GIS/21611091GIS.md
@@ -2,7 +2,8 @@
 **道案内**
 * 道に迷ったときに目的を決定し案内してくれる
 * 自分があたかもいるような感じで見れる
-
-*twitter*
+* ttps://www.google.co.jp/maps
+#twitter
 * 写真撮影の場所
 * 見ている人の共感、興味:+1:
+* http://t-proj.com/twitter/
