--- a/GIS/21611092GIS.md
+++ b/GIS/21611092GIS.md
@@ -1,14 +1,14 @@
 #位置情報を利用したサービス　
- * Twitter
- * Facebook
- * Instagram       etc...　
+ * [Twitter](https://twitter.com/?lang=ja)
+ * [Facebook](https://ja-jp.facebook.com/)
+ * [Instagram](https://www.instagram.com/instagramjapan/?hl=ja)　
 
 ##ターゲット
  * 若者　
  * 学生
  * スマートフォン使用者
-
-###今の流行、時代の流れなどの最新情報の知るための手段
-[参考ページ](http://www.danshihack.com/2016/05/10/junp/iphone-tips-exif.html)
-
-
+ * 社会人
+ 
+##コンセプト　
+ * 友達との情報共有
+ * 最新の情報がわかるアプリケーション　
