--- a/GIS/21611092GIS.md
+++ b/GIS/21611092GIS.md
@@ -1,4 +1,4 @@
-#位置情報を利用したサービス　
+#位置情報を利用したサービス:dog::purple_heart:
  * [Twitter](https://twitter.com/?lang=ja)
  * [Facebook](https://ja-jp.facebook.com/)
  * [Instagram](https://www.instagram.com/instagramjapan/?hl=ja)　
